--- a/src/app/components/todo-list/add-task/add-task.component.html
+++ b/src/app/components/todo-list/add-task/add-task.component.html
@@ -31,25 +31,16 @@
                 </mat-autocomplete>
             </mat-form-field>
             <mat-form-field class="w-100" appearance="outline">
-                <mat-chip-list #statusList aria-label="Status selection">
-                  <mat-chip *ngFor="let status of created_task.status" (removed)="removeStatus(status)">
-                    {{status}}
-                    <mat-icon matChipRemove>cancel</mat-icon>
-                  </mat-chip>
-                  <input
-                    placeholder="Select or press enter to add status"
-                    #statusInput
-                    [formControl]="statusCtrl"
-                    [matAutocomplete]="autoStatus"
-                    [matChipInputFor]="statusList"
-                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                    (matChipInputTokenEnd)="addStatus($event)">
-                </mat-chip-list>
-                <mat-autocomplete #autoStatus="matAutocomplete" (optionSelected)="selectedStatus($event)">
-                  <mat-option *ngFor="let status of filteredStatus | async" [value]="status">
-                    {{status}}
-                  </mat-option>
-                </mat-autocomplete>
+              <mat-label>Status</mat-label>
+              <mat-select [formControl]="status" multiple>
+                <mat-select-trigger>
+                  {{status.value ? status.value[0] : ''}}
+                  <span *ngIf="status.value?.length > 1" class="example-additional-selection">
+                    (+{{status.value.length - 1}} {{status.value?.length === 2 ? 'other' : 'others'}})
+                  </span>
+                </mat-select-trigger>
+                <mat-option *ngFor="let stat of tasks.status" [value]="stat" (click)="selectedStatus(stat)">{{stat}}</mat-option>
+              </mat-select>
             </mat-form-field>
             <mat-form-field color="primary" class="w-100" appearance="outline">
                 <mat-label>Due date</mat-label>
