--- a/src/app/components/todo-list/completed/completed.component.html
+++ b/src/app/components/todo-list/completed/completed.component.html
@@ -1,9 +1,14 @@
 <div class="container">
   <br/>
   <h2><b>Completed Tasks</b></h2>
-  <div class="header-right">
-    <button mat-button (click)="createTask()" class="button"><mat-icon>add</mat-icon> Create Task</button>
-    <br/><br/>
+  <div >
+    <button mat-button (click)="createTask()" class="button header-right"><mat-icon>add</mat-icon> Create Task</button>
+    <br/><br/><br/>
+    <mat-form-field class="w-100 h-100" appearance="outline">
+      <mat-label>Search Task</mat-label>
+      <input matInput placeholder="Search Task" (keyup)="_filterTasks($event)">
+    </mat-form-field>
+    <br/>
   </div>
   
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
@@ -30,12 +35,11 @@
     <ng-container matColumnDef='action'>
       <th mat-header-cell *matHeaderCellDef class="dark_bg">Action</th>
       <td mat-cell *matCellDef="let element">
-        <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <span class="option" (click)="unarchiveItem(element)" style="cursor: pointer;"><mat-icon>arrow_upward</mat-icon></span>
+        <span class="option" (click)="deleteItem(element)" style="cursor: pointer;"><mat-icon>delete</mat-icon></span>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
