--- a/src/app/components/todo-list/upcoming/upcoming.component.html
+++ b/src/app/components/todo-list/upcoming/upcoming.component.html
@@ -1,26 +1,27 @@
 <div class="container">
   <br/>
   <h2><b>Upcoming Tasks</b></h2>
-  <div class="header-right">
-    <button mat-button (click)="createTask()" class="button"><mat-icon>add</mat-icon> Create Task</button>
-    <br/><br/>
+  <div >
+    <button mat-button (click)="createTask()" class="button header-right"><mat-icon>add</mat-icon> Create Task</button>
+    <br/><br/><br/>
+    <mat-form-field class="w-100 h-100" appearance="outline">
+      <mat-label>Search Task</mat-label>
+      <input matInput placeholder="Search Task" (keyup)="_filterTasks($event)">
+    </mat-form-field>
+    <br/>
   </div>
   
   <table mat-table [dataSource]='_dataSource' matSort multiTemplateDataRows>
-    <ng-container matColumnDef='date'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Created on</th>
-      <td mat-cell *matCellDef="let element">{{element.date | date: 'short' }}</td>
-    </ng-container>
     <ng-container matColumnDef='value'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">to-do</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">My Activity</th>
       <td mat-cell *matCellDef="let element">{{element.value}}</td>
     </ng-container>
     <ng-container matColumnDef='label'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Label</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Labels</th>
       <td mat-cell *matCellDef="let element">{{element.label}}</td>
     </ng-container>
     <ng-container matColumnDef='status'>
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Status</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Current Status</th>
       <td mat-cell *matCellDef="let element">{{element.status}}</td>
     </ng-container>
     <ng-container matColumnDef='dueDate'>
@@ -33,9 +34,12 @@
         <span class="option" (click)="editItem(element)" style="cursor: pointer;"><mat-icon>edit</mat-icon></span>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <span class="option" (click)="archiveItem(element)" style="cursor: pointer;"><mat-icon>archive</mat-icon></span>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <span class="option" (click)="deleteItem(element)" style="cursor: pointer;"><mat-icon>delete</mat-icon></span>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="_cols; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: _cols"></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
