--- a/src/app/components/todo-list/add-task/add-task.component.html
+++ b/src/app/components/todo-list/add-task/add-task.component.html
@@ -42,6 +42,17 @@
                 <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                 <mat-datepicker #picker1></mat-datepicker>
             </mat-form-field>
+            <!-- <mat-form-field> -->
+              <mat-slider
+                [min] = 0
+                [max] = 100
+                [step] = 5
+                [thumbLabel] = true
+                [value] = 0
+                [tickInterval] = 0
+                [(ngModel)]="created_task.progress">
+              </mat-slider>
+            <!-- </mat-form-field> -->
         </div>
         <button mat-button (click)="createTask()" class="button" *ngIf="!updated_task">Create Task</button>
         <button mat-button (click)="updateTask()" class="button" *ngIf="updated_task">Update Task</button>
