--- a/src/app/components/todo-list/completed/completed.component.html
+++ b/src/app/components/todo-list/completed/completed.component.html
@@ -50,6 +50,12 @@
         </div>
       </td>
     </ng-container>
+    <ng-container matColumnDef='progress'>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Progress</th>
+      <td mat-cell *matCellDef="let element">
+        <circle-progress [percent]="element.progress"></circle-progress>
+      </td>
+    </ng-container>
     <ng-container matColumnDef='dueDate'>
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="dark_bg">Due Date</th>
       <td mat-cell *matCellDef="let element">{{element.dueDate | date: 'short' }}</td>
